# lr_schedules

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.ipynb  README.md  pyproject.toml
.github/workflows/: .pythonpackage  pythonpackage.yml
.notebooks/: initial_explore.ipynb
lr_schedules/: __init__.py  interp.py  linear_scheduler.py
scripts/: replace_readme_image_links.py
tests/: test_interp.py  test_linear_scheduler.py
